--- a/src/notepadGUI.form
+++ b/src/notepadGUI.form
@@ -45,7 +45,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="1df74" class="javax.swing.JMenu" binding="formate">
+      <component id="1df74" class="javax.swing.JMenu" binding="textFormat">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
